packages/yew-macro/tests/html_macro/component-unimplemented-fail.stderr
error[E0277]: the trait bound `Unimplemented: yew::Component` is not satisfied
 --> tests/html_macro/component-unimplemented-fail.rs:6:14
  |
6 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ the trait `yew::Component` is not implemented for `Unimplemented`, which is required by `Unimplemented: BaseComponent`
  |
  = help: the trait `yew::Component` is implemented for `ContextProvider<T>`
  = note: required for `Unimplemented` to implement `BaseComponent`
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `VChild<Unimplemented>`, but its trait bounds were not satisfied
 --> tests/html_macro/component-unimplemented-fail.rs:6:14
  |
3 | struct Unimplemented;
  | -------------------- doesn't satisfy `Unimplemented: BaseComponent`
...
6 |     html! { <Unimplemented /> };
  |              ^^^^^^^^^^^^^ function or associated item cannot be called on `VChild<Unimplemented>` due to unsatisfied trait bounds
  |
note: if you're trying to build a new `VChild<Unimplemented>`, consider using `VChild::<COMP>::new` which returns `VChild<_>`
 --> $WORKSPACE/packages/yew/src/virtual_dom/vcomp.rs
  |
  |     pub fn new(props: COMP::Properties, key: Option<Key>) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: the following trait bounds were not satisfied:
          `Unimplemented: BaseComponent`
note: the trait `BaseComponent` must be implemented
 --> $WORKSPACE/packages/yew/src/html/component/mod.rs
  |
  | pub trait BaseComponent: Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
