packages/yew-macro/tests/html_macro/component-unimplemented-fail.rs
use yew::prelude::*;

struct Unimplemented;

fn compile_fail() {
    html! { <Unimplemented /> };
}

fn main() {}
